--- a/ansible-playbooks/roles/apache/files/apache.conf.j2
+++ b/ansible-playbooks/roles/apache/files/apache.conf.j2
@@ -1,11 +1,11 @@
 <VirtualHost *:{{ http_port }}>
     ServerName {{ http_host }}
-    ServerAlias www.{{ http_host }}
-    DocumentRoot /var/www/{{ http_host }}
+    ServerAlias {{ http_host }}
+    DocumentRoot /var/www/redex
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /var/www/{{ http_host }}>
+    <Directory /var/www/redex>
           Options -Indexes
     </Directory>
 
