--- a/ansible-playbooks/roles/apache/files/apache.conf.j2
+++ b/ansible-playbooks/roles/apache/files/apache.conf.j2
@@ -7,10 +7,12 @@
 
     <Directory /var/www/redex>
         Options -Indexes
+        {% if whitelist_ips %}
         {{ "Require all denied" }}
         {% for ip in whitelist_ips %}
         Require ip {{ ip }}
         {% endfor %}
+        {% endif %}
     </Directory>
 
     <IfModule mod_dir.c>
